<resources>
    <string name="app_name">COVID_app</string>
    <string name="q1">Select from following: </string>
    <string name="p1">Wearing a mask when outside? </string>
    <string name="p2">Washing hands frequently? </string>
    <string name="p3">Maintaining 2 feet distnce ? </string>
    <string name="p4">Covering nose and mouth while sneezing and coughing? </string>
    <string name="p5">Taking health diets?</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>